--- a/src/project/project1/test.ipynb
+++ b/src/project/project1/test.ipynb
@@ -24,22 +24,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['olist_sellers_dataset.csv',\n",
-       " 'product_category_name_translation.csv',\n",
-       " 'olist_orders_dataset.csv',\n",
-       " 'olist_order_items_dataset.csv',\n",
-       " 'olist_customers_dataset.csv',\n",
-       " 'olist_geolocation_dataset.csv',\n",
-       " 'olist_order_payments_dataset.csv',\n",
-       " 'olist_order_reviews_dataset.csv',\n",
-       " 'olist_products_dataset.csv']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/jun/GitStudy/Data_4/Data/Olist'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m data_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Users/jun/GitStudy/Data_4/Data/Olist\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m os\u001b[38;5;241m.\u001b[39mlistdir()\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/jun/GitStudy/Data_4/Data/Olist'"
+     ]
     }
    ],
    "source": [
