--- a/src/project/project2/Last6.ipynb
+++ b/src/project/project2/Last6.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Volumes/Seagate/2023/2nd_semester/BigDataAPI/lastTest/data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/Volumes/Seagate/2023/2nd_semester/BigDataAPI/lastTest/data\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Volumes/Seagate/2023/2nd_semester/BigDataAPI/lastTest/data'"
+     ]
+    }
+   ],
    "source": [
     "os.chdir(\"/Volumes/Seagate/2023/2nd_semester/BigDataAPI/lastTest/data\")"
    ]
@@ -165,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2654,7 +2666,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow-dev",
+   "display_name": "leo4study",
    "language": "python",
    "name": "python3"
   },
@@ -2668,7 +2680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
