new files added. subject4.ipynb

--- a/src/project/project3/subject1.ipynb
+++ b/src/project/project3/subject1.ipynb
@@ -2,99 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import kaggle_link_to\n",
     "import pandas as pd\n",
     "import os\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original directory /Users/jun/.cache/kagglehub/datasets has been removed.\n",
-      "Files saved to: /Users/jun/GitStudy/Data_4/Data/temp\n",
-      " ['teams.csv', 'players.csv', 'games.csv', 'ranking.csv', 'games_details.csv']\n"
-     ]
-    }
-   ],
-   "source": [
-    "path = '/Users/jun/GitStudy/Data_4/Data/temp'\n",
-    "kaggle_link_to.link_csv_to(\"nathanlauga/nba-games\",path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "kaggle_link_to.link_csv_to(\"nathanlauga/nba-games\",\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading from https://www.kaggle.com/api/v1/datasets/download/nathanlauga/nba-games?dataset_version_number=10...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 21.2M/21.2M [00:02<00:00, 11.1MB/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/jun/.cache/kagglehub/datasets/nathanlauga/nba-games/versions/10'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import kagglehub\n",
-    "\n",
-    "kagglehub.dataset_download('nathanlauga/nba-games')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,17 +31,13 @@
        " 'Retail_dataset.xlsx']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "path = \"/Users/jun/GitStudy/Data_4/Data/eCommerce3\"\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import os\n",
     "\n",
     "os.chdir(path)\n",
     "list1 = os.listdir()\n",
@@ -129,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -352,15 +269,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# 자연어 처리\n",
+    "# 자연어 처리 x\n",
     "# 아이템 크게 4가지 항목으로 분류, (ID 별 구매한 아이템 조회, 묶어서 타겟 설정.) #2개 이하 구매한 고객은 학습에서 제외\n",
     "# 지역, price\n",
     "# 바이어 id,\n",
@@ -368,6 +278,17 @@
     "# 셀러는 itemid, 바이어id\n",
     "# 바이어id , 셀러id\n",
     "# payment_insallments 할부( 할부 금액에 따른 구매 습관, 지역이 다르지 않을까? )\n",
+    "# 구매 요일\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# quantity\n",
     "# "
    ]
   },
@@ -392,8 +313,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cluster import KMeans"
+    "from sklearn.cluster import KMeans\n",
+    "import seaborn as sns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
