project 12.05 added version 1,2 //

--- a/src/ML/all/Chap6.ipynb
+++ b/src/ML/all/Chap6.ipynb
@@ -632,8 +632,8 @@
     }
    ],
    "source": [
-    "retail_df = pd.read_excel('C:/Users/user/Documents/ML/Online Retail.xlsx')\n",
-    "retail_df.head(3)"
+    "commerce_df = pd.read_excel('C:/Users/user/Documents/ML/Online Retail.xlsx')\n",
+    "commerce_df.head(3)"
    ]
   },
   {
@@ -664,7 +664,7 @@
     }
    ],
    "source": [
-    "retail_df.info()"
+    "commerce_df.info()"
    ]
   },
   {
@@ -692,7 +692,7 @@
     }
    ],
    "source": [
-    "retail_df.isnull().sum()"
+    "commerce_df.isnull().sum()"
    ]
   },
   {
@@ -905,7 +905,7 @@
    ],
    "source": [
     "## 1. 데이터EDA 및 전처리 \n",
-    "retail_df.describe(include = 'all')"
+    "commerce_df.describe(include = 'all')"
    ]
   },
   {
@@ -1107,8 +1107,8 @@
     }
    ],
    "source": [
-    "cond1 = retail_df['Quantity']< 0\n",
-    "retail_df[cond1]"
+    "cond1 = commerce_df['Quantity']< 0\n",
+    "commerce_df[cond1]"
    ]
   },
   {
@@ -1147,8 +1147,8 @@
     }
    ],
    "source": [
-    "cond_cust = (retail_df['CustomerID'].notnull())\n",
-    "retail_df[cond_cust].isnull().sum()"
+    "cond_cust = (commerce_df['CustomerID'].notnull())\n",
+    "commerce_df[cond_cust].isnull().sum()"
    ]
   },
   {
@@ -1243,8 +1243,8 @@
     }
    ],
    "source": [
-    "cond_invo = (retail_df['InvoiceNo'].astype(str).str[0] != 'C')\n",
-    "retail_df[cond_invo].head(3)"
+    "cond_invo = (commerce_df['InvoiceNo'].astype(str).str[0] != 'C')\n",
+    "commerce_df[cond_invo].head(3)"
    ]
   },
   {
@@ -1339,8 +1339,8 @@
     }
    ],
    "source": [
-    "cond_minus = (retail_df['Quantity'] >0 ) & (retail_df['UnitPrice'] >0)\n",
-    "retail_df[cond_minus].head(3)"
+    "cond_minus = (commerce_df['Quantity'] >0 ) & (commerce_df['UnitPrice'] >0)\n",
+    "commerce_df[cond_minus].head(3)"
    ]
   },
   {
@@ -1371,8 +1371,8 @@
     }
    ],
    "source": [
-    "retail_df_2 = retail_df[cond_cust & cond_invo & cond_minus]\n",
-    "retail_df_2.info()"
+    "commerce_df_2 = commerce_df[cond_cust & cond_invo & cond_minus]\n",
+    "commerce_df_2.info()"
    ]
   },
   {
@@ -1403,7 +1403,7 @@
     }
    ],
    "source": [
-    "retail_df_2['Country'].value_counts()[:10]"
+    "commerce_df_2['Country'].value_counts()[:10]"
    ]
   },
   {
@@ -1605,9 +1605,9 @@
     }
    ],
    "source": [
-    "cond_uk = (retail_df_2['Country'] =='United Kingdom')\n",
-    "retail_df_2 = retail_df_2[cond_uk]\n",
-    "retail_df_2"
+    "cond_uk = (commerce_df_2['Country'] =='United Kingdom')\n",
+    "commerce_df_2 = commerce_df_2[cond_uk]\n",
+    "commerce_df_2"
    ]
   },
   {
@@ -1819,7 +1819,7 @@
     }
    ],
    "source": [
-    "retail_df_2.describe(include= 'all')"
+    "commerce_df_2.describe(include= 'all')"
    ]
   },
   {
@@ -1828,8 +1828,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retail_df_2['Amt'] = retail_df_2['Quantity'] * retail_df_2['UnitPrice']\n",
-    "retail_df_2['Amt'] = retail_df_2['Amt'].astype('int')"
+    "commerce_df_2['Amt'] = commerce_df_2['Quantity'] * commerce_df_2['UnitPrice']\n",
+    "commerce_df_2['Amt'] = commerce_df_2['Amt'].astype('int')"
    ]
   },
   {
@@ -1934,7 +1934,7 @@
     }
    ],
    "source": [
-    "retail_df_2[['CustomerID']].drop_duplicates()"
+    "commerce_df_2[['CustomerID']].drop_duplicates()"
    ]
   },
   {
@@ -2044,7 +2044,7 @@
     }
    ],
    "source": [
-    "retail_df_2.pivot_table(index = 'CustomerID', values = 'Amt', aggfunc='sum').sort_values('Amt', ascending=False)"
+    "commerce_df_2.pivot_table(index = 'CustomerID', values = 'Amt', aggfunc='sum').sort_values('Amt', ascending=False)"
    ]
   },
   {
@@ -2153,8 +2153,8 @@
     "# 1번사람 100일전, 20일전, 5일전\n",
     "\n",
     "\n",
-    "retail_df_2['Period'] = (dt.datetime(2011,12,10) - retail_df_2['InvoiceDate']).apply(lambda x: x.days+1)\n",
-    "retail_df_2.head(3)"
+    "commerce_df_2['Period'] = (dt.datetime(2011,12,10) - commerce_df_2['InvoiceDate']).apply(lambda x: x.days+1)\n",
+    "commerce_df_2.head(3)"
    ]
   },
   {
@@ -2290,7 +2290,7 @@
     }
    ],
    "source": [
-    "rfm_df = retail_df_2.groupby('CustomerID').agg({\n",
+    "rfm_df = commerce_df_2.groupby('CustomerID').agg({\n",
     "    'Period' : 'min',\n",
     "    'InvoiceNo' : 'count',\n",
     "    'Amt' : 'sum'\n",
