--- a/src/project/project3/subject3 copy.ipynb
+++ b/src/project/project3/subject3 copy.ipynb
@@ -1207,7 +1207,7 @@
     "# 안 쓰는 행 삭제\n",
     "columns_to_remove = ['order_estimated_delivery_date', 'shipping_charges', 'price', 'payment_value','customer_city','order_approved_at']\n",
     "\n",
-    "retail_df = data_cleaned_df.drop(columns=columns_to_remove)"
+    "commerce_df = data_cleaned_df.drop(columns=columns_to_remove)"
    ]
   },
   {
@@ -1245,7 +1245,7 @@
    ],
    "source": [
     "list1 = []\n",
-    "for i in retail_df.columns.tolist():\n",
+    "for i in commerce_df.columns.tolist():\n",
     "    if i not in columns_to_remove:\n",
     "        list1.append(i)\n",
     "list1"
@@ -2148,7 +2148,7 @@
     }
    ],
    "source": [
-    "retail_df.T"
+    "commerce_df.T"
    ]
   },
   {
@@ -2192,7 +2192,7 @@
     }
    ],
    "source": [
-    "retail_df['product_category_name'].unique()"
+    "commerce_df['product_category_name'].unique()"
    ]
   },
   {
@@ -2284,8 +2284,8 @@
     "        return 'other'\n",
     "\n",
     "# retail['product_category_name'] 컬럼을 새로운 카테고리로 분류\n",
-    "retail_df['category'] = retail_df['product_category_name'].apply(categorize_product)\n",
-    "retail_df = retail_df.drop(columns='product_category_name')"
+    "commerce_df['category'] = commerce_df['product_category_name'].apply(categorize_product)\n",
+    "commerce_df = commerce_df.drop(columns='product_category_name')"
    ]
   },
   {
@@ -2308,7 +2308,7 @@
     }
    ],
    "source": [
-    "retail_df['category'].unique()"
+    "commerce_df['category'].unique()"
    ]
   },
   {
@@ -2350,15 +2350,15 @@
    ],
    "source": [
     "#retail = retail.drop_duplicates()\n",
-    "retail_df = retail_df.reset_index(drop=True)\n",
-    "retail_df.info()"
+    "commerce_df = commerce_df.reset_index(drop=True)\n",
+    "commerce_df.info()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. retail_df의 `order_id`, `payment_type` 컬럼만 뽑아서\n",
+    "1. commerce_df의 `order_id`, `payment_type` 컬럼만 뽑아서\n",
     "2. `order_id` 로 그룹하고\n",
     "3. id 별로 묶인`payment_type`들을 set() 에 넣어서 중복 없게 만들고\n",
     "4. 위에서 만든 payment_type 순으로 정렬\n",
@@ -2479,11 +2479,11 @@
     }
    ],
    "source": [
-    "payment_list = sorted(retail_df['payment_type'].unique())\n",
+    "payment_list = sorted(commerce_df['payment_type'].unique())\n",
     "\n",
     "# 그룹화된 payment_type을 sorted된 순서로 결합\n",
     "result = (\n",
-    "    retail_df[['order_id', 'payment_type']]\n",
+    "    commerce_df[['order_id', 'payment_type']]\n",
     "    .groupby('order_id')['payment_type']\n",
     "    .apply(lambda x: '/'.join(sorted(set(x), key=lambda y: payment_list.index(y))))\n",
     "    .reset_index()\n",
@@ -3527,8 +3527,8 @@
     }
    ],
    "source": [
-    "# retail_df 에 있는 payment_type 을 지우고 order_id로 groupby\n",
-    "retail_cleaned = retail_df.drop(columns='payment_type')\n",
+    "# commerce_df 에 있는 payment_type 을 지우고 order_id로 groupby\n",
+    "retail_cleaned = commerce_df.drop(columns='payment_type')\n",
     "retail_grouped = retail_cleaned.groupby('order_id').first().reset_index()\n",
     "\n",
     "# 아까 만든 id 별 payment_type 테이블과 join\n",
@@ -4441,7 +4441,7 @@
     "\n",
     "\n",
     "# 가장 최근 구매 건을 기준으로 해당 아이템의 구매가 얼마나 오래 되었는지 나타내는 # Recency column 추가\n",
-    "max_date = max(retail_df['order_purchase_timestamp']) #최근 구매\n",
+    "max_date = max(commerce_df['order_purchase_timestamp']) #최근 구매\n",
     "merged_df['Diff_days'] = (max_date - merged_df['order_purchase_timestamp']).dt.days + 1\n",
     "merged_df = merged_df.drop(columns='order_purchase_timestamp')\n",
     "merged_df.T"
@@ -9264,7 +9264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -9293,12 +9293,14 @@
     "for i in range(1, 11):\n",
     "    km = KMeans(n_clusters=i).fit(X)\n",
     "    clusters.append(km.inertia_)\n",
-    "    \n",
+    "\n",
+    "\n",
     "fig, ax = plt.subplots(figsize=(12, 8))\n",
     "sns.lineplot(x=list(range(1, 11)), y=clusters, ax=ax)\n",
     "ax.set_title('Searching for Elbow')\n",
     "ax.set_xlabel('Clusters')\n",
     "ax.set_ylabel('Inertia')\n",
+    "\n",
     "\n",
     "# Annotate arrow\n",
     "ax.annotate('Possible Elbow Point', xy=(3, 140000), xytext=(3, 50000), xycoords='data',          \n",
