removed src/GraphRAG-Local-UI

--- a/src/rag_chatbot/neo4j/neo4j_recommend.ipynb
+++ b/src/rag_chatbot/neo4j/neo4j_recommend.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "#os.environ[\"OPENAI_API_KEY\"] = \"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\""
+    "#os.environ[\"OPENAI_API_KEY\"] = \"your_api_key\""
    ]
   },
   {
