--- a/src/rag_chatbot/neo4j/neo4j_recommend.ipynb
+++ b/src/rag_chatbot/neo4j/neo4j_recommend.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "import httpx\n",
     "\n",
     "driver = GraphDatabase.driver(\n",
-    "    \"bolt://44.203.214.24\",\n",
+    "    \"your_driver_key\",\n",
     "    auth = basic_auth(\"neo4j\", \"subprograms-nylons-numerals\"))"
    ]
   },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
     "from neo4j import GraphDatabase, basic_auth\n",
     "\n",
     "driver = GraphDatabase.driver(\n",
-    "    \"bolt://107.22.103.1:7687\",\n",
+    "    \"your_driver_key\",\n",
     "    auth=basic_auth(\"neo4j\", \"deficiencies-information-collision\"))\n",
     "\n",
     "cypher_query = '''\n",
