--- a/src/rag_chatbot/neo4j/neo4j_recommend.ipynb
+++ b/src/rag_chatbot/neo4j/neo4j_recommend.ipynb
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
    ],
    "source": [
     "# Neo4j DB Schema 제공\n",
-    "schema = get_schema(\"bolt://44.203.214.24\",\"neo4j\", \"subprograms-nylons-numerals\")\n",
+    "schema = get_schema(\"your_key\",\"neo4j\", \"subprograms-nylons-numerals\")\n",
     "neo4j_schema = format_schema(schema)\n",
     "print(neo4j_schema)"
    ]
