added pltKorean_mac2 and fpdf example

--- a/src/project/project5/tiktok/0130/tiktoker_EDA.ipynb
+++ b/src/project/project5/tiktok/0130/tiktoker_EDA.ipynb
@@ -40,11 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/Users/jun/GitStudy/Data_4/src/project/project5/tiktok/0130/tiktoker_crawling_df_0127.csv\")"
+    "DATA_PATH = \"\"\n",
+    "os.chdir(DATA_PATH)\n",
+    "df = pd.read_csv(DATA_PATH+\"tiktoker_crawling_df_0127.csv\")"
    ]
   },
   {
@@ -1128,10 +1130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "df.to_csv('tiktoker_final_df_0127.csv',index=False, encoding=\"utf-8-sig\")"
    ]
   },
@@ -1144,12 +1147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 데이터 다시 불러오기 \n",
-    "df = pd.read_csv('/Users/jun/GitStudy/Data_4/src/project/project5/tiktok/0130/tiktoker_final_df_0127.csv')"
+    "df = pd.read_csv('tiktoker_final_df_0127.csv')"
    ]
   },
   {
