--- a/src/project/project5/tiktok/recommend/tiktoker_recommend.ipynb
+++ b/src/project/project5/tiktok/recommend/tiktoker_recommend.ipynb
@@ -926,11 +926,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '/Users/jun/GitStudy/Data_4/src/project/project5/tiktok/recommend/data/'\n",
+    "data_path = ''\n",
     "os.chdir(data_path)\n",
     "df.to_csv('tiktoker_final_df_0127.csv',index=False, encoding=\"utf-8-sig\")"
    ]
