--- a/src/project/sub_p/eCommerce3_1.ipynb
+++ b/src/project/sub_p/eCommerce3_1.ipynb
@@ -123,7 +123,15 @@
     "        plt.text(i + x_offset, cum_ev_ratio + y_offset, f\"{cum_ev_ratio:.2f}\", ha=\"center\", va=\"bottom\", fontsize=10)\n",
     "\n",
     "plt.grid(axis='both')   \n",
-    "plt.show()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "Conclusion\n",
     "The plot and the cumulative explained variance values indicate how much of the total variance in the dataset is captured by each principal component, as well as the cumulative variance explained by the first n components.\n",
@@ -232,8 +240,6 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "나의 말:\n",
     "Now, let's extract the coefficients corresponding to each principal component to better understand the transformation performed by PCA:\n",
     "\n",
@@ -308,8 +314,6 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "나의 말:\n",
     "Drawbacks of K-Means:\n",
     "Here are the main drawbacks of the K-means clustering algorithm and their corresponding solutions:\n",
@@ -359,9 +363,6 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "나의 말:\n",
     "What is the Silhouette Method?\n",
     "The Silhouette Method is an approach to find the optimal number of clusters in a dataset by evaluating the consistency within clusters and their separation from other clusters. It computes the silhouette coefficient for each data point, which measures how similar a point is to its own cluster compared to other clusters.\n",
@@ -381,8 +382,6 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "나의 말:\n",
     "What is the Silhouette Method?\n",
     "The Silhouette Method is an approach to find the optimal number of clusters in a dataset by evaluating the consistency within clusters and their separation from other clusters. It computes the silhouette coefficient for each data point, which measures how similar a point is to its own cluster compared to other clusters.\n",
@@ -394,33 +393,7 @@
     "Calculate b(i): Compute the average distance between point i and all points in the nearest cluster to its own.\n",
     "Compute the silhouette coefficient, s(i), for point i using the following formula:\n",
     "\n",
-    "s\n",
-    "(\n",
-    "i\n",
-    ")\n",
-    "=\n",
-    "b\n",
-    "(\n",
-    "i\n",
-    ")\n",
-    "−\n",
-    "a\n",
-    "(\n",
-    "i\n",
-    ")\n",
-    "max\n",
-    "(\n",
-    "b\n",
-    "(\n",
-    "i\n",
-    ")\n",
-    ",\n",
-    "a\n",
-    "(\n",
-    "i\n",
-    ")\n",
-    ")\n",
-    " \n",
+    "\n",
     "\n",
     "Note: The silhouette coefficient quantifies the similarity of a point to its own cluster (cohesion) relative to its separation from other clusters. This value ranges from -1 to 1, with higher values signifying that the point is well aligned with its cluster and has a low similarity to neighboring clusters.\n",
     "\n",
@@ -441,62 +414,25 @@
     "\n",
     "실루엣 계수(Silhouette Coefficient)란?\n",
     "데이터 포인트 \n",
-    "𝑖\n",
+    "\n",
     "i에 대해 실루엣 계수를 계산하려면 다음 단계를 따릅니다:\n",
     "1️⃣ \n",
-    "𝑎\n",
-    "(\n",
-    "𝑖\n",
-    ")\n",
     "a(i) 계산: 데이터 포인트 \n",
-    "𝑖\n",
+    "\n",
     "i와 동일한 클러스터에 있는 다른 모든 포인트와의 평균 거리를 계산.\n",
     "2️⃣ \n",
-    "𝑏\n",
-    "(\n",
-    "𝑖\n",
-    ")\n",
+    "\n",
     "b(i) 계산: 데이터 포인트 \n",
-    "𝑖\n",
+    "\n",
     "i와 가장 가까운 다른 클러스터의 모든 포인트와의 평균 거리를 계산.\n",
     "3️⃣ 실루엣 계수 \n",
-    "𝑠\n",
-    "(\n",
-    "𝑖\n",
-    ")\n",
+    "\n",
     "s(i) 계산: 아래 공식을 사용하여 계산.\n",
     "\n",
-    "𝑠\n",
-    "(\n",
-    "𝑖\n",
-    ")\n",
-    "=\n",
-    "𝑏\n",
-    "(\n",
-    "𝑖\n",
-    ")\n",
-    "−\n",
-    "𝑎\n",
-    "(\n",
-    "𝑖\n",
-    ")\n",
-    "max\n",
-    "⁡\n",
-    "(\n",
-    "𝑏\n",
-    "(\n",
-    "𝑖\n",
-    ")\n",
-    ",\n",
-    "𝑎\n",
-    "(\n",
-    "𝑖\n",
-    ")\n",
-    ")\n",
+    "\n",
     "s(i)= \n",
     "max(b(i),a(i))\n",
     "b(i)−a(i)\n",
-    "​\n",
     " \n",
     "실루엣 계수 값의 범위:\n",
     "1에 가까울수록: 해당 포인트가 자신의 클러스터와 잘 결합(cohesion)되어 있고, 다른 클러스터와 명확히 분리됨.\n",
