--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,6 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = '/Users/jun/Desktop/MBTI 일상툰 - YouTube.html'\n",
+    "\n",
+    "with open(file_path, 'r') as f:\n",
+    "    html = f.read()\n",
+    "\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "items = soup.find_all(\"ytd-rich-item-renderer\", class_=\"style-scope ytd-rich-grid-renderer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "448"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
