chatbot_settings.yaml 수정 폴더 위치 바뀌면서 가져오는 위치도 수정

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -725,12 +725,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in list1:\n"
+    "import os\n",
+    "os.environ['DYLD_LIBRARY_PATH'] = '/opt/homebrew/opt/zbar/lib'\n",
+    "image_path = \"/Users/jun/Desktop/temp/test\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['base2.jpeg', '.DS_Store', 'base3.png', 'base4.png', 'base1.jpeg']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_list = os.listdir(image_path)\n",
+    "file_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyzbar.pyzbar import decode\n",
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for f in file_list:\n",
+    "    if \"base\" in f:\n",
+    "        img = Image.open(os.path.join(image_path, f))\n",
+    "        result = decode(img)\n",
+    "        print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QR 코드를 찾지 못했습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import os\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "image_path = \"/Users/jun/Desktop/temp/test\"\n",
+    "img = cv2.imread(os.path.join(image_path, \"base2.jpeg\"))\n",
+    "\n",
+    "if img is None:\n",
+    "    raise FileNotFoundError(\"이미지를 찾을 수 없습니다. 경로를 확인하세요.\")\n",
+    "\n",
+    "qrDecoder = cv2.QRCodeDetector()\n",
+    "\n",
+    "# QR코드 인식 및 위치 반환\n",
+    "data, points, _ = qrDecoder.detectAndDecode(img)\n",
+    "\n",
+    "if points is not None:\n",
+    "    points = points[0].astype(int)\n",
+    "    # 바운딩 박스 좌표로 이미지 크롭\n",
+    "    x1, y1 = points.min(axis=0)\n",
+    "    x2, y2 = points.max(axis=0)\n",
+    "    qr_img = img[y1:y2, x1:x2]\n",
+    "\n",
+    "    # 크롭한 QR 코드 영역을 그레이스케일 & 이진화\n",
+    "    gray_qr = cv2.cvtColor(qr_img, cv2.COLOR_BGR2GRAY)\n",
+    "    _, bin_qr = cv2.threshold(gray_qr, 128, 255, cv2.THRESH_BINARY)\n",
+    "\n",
+    "    plt.imshow(bin_qr, cmap='gray')\n",
+    "    plt.title(\"Cropped QR Code Binary\")\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    print(\"QR 코드 내용:\", data)\n",
+    "else:\n",
+    "    print(\"QR 코드를 찾지 못했습니다.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "그리기 완료 후 'q' 키를 눌러 종료합니다.\n",
+      "수정된 이미지를 'repaired_qr.png'로 저장했습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "img = cv2.imread(os.path.join(image_path, \"base2.jpeg\"), cv2.IMREAD_GRAYSCALE)\n",
+    "if img is None:\n",
+    "    raise FileNotFoundError(\"이미지 로드 실패\")\n",
+    "\n",
+    "drawing = False  # 그리기 상태 플래그\n",
+    "ix, iy = -1, -1  # 시작 좌표\n",
+    "\n",
+    "def draw(event, x, y, flags, param):\n",
+    "    global ix, iy, drawing, img\n",
+    "\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "        drawing = True\n",
+    "        ix, iy = x, y\n",
+    "\n",
+    "    elif event == cv2.EVENT_MOUSEMOVE:\n",
+    "        if drawing:\n",
+    "            img_copy = img.copy()\n",
+    "            # 흰색(255) 사각형 그리기\n",
+    "            cv2.rectangle(img_copy, (ix, iy), (x, y), (255,), thickness=-1)\n",
+    "            cv2.imshow('image', img_copy)\n",
+    "\n",
+    "    elif event == cv2.EVENT_LBUTTONUP:\n",
+    "        drawing = False\n",
+    "        cv2.rectangle(img, (ix, iy), (x, y), (255,), thickness=-1)\n",
+    "        cv2.imshow('image', img)\n",
+    "\n",
+    "cv2.imshow('image', img)\n",
+    "cv2.setMouseCallback('image', draw)\n",
+    "\n",
+    "print(\"그리기 완료 후 'q' 키를 눌러 종료합니다.\")\n",
+    "while True:\n",
+    "    key = cv2.waitKey(1) & 0xFF\n",
+    "    if key == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "cv2.destroyAllWindows()\n",
+    "\n",
+    "cv2.imwrite('repaired_qr.png', img)\n",
+    "print(\"수정된 이미지를 'repaired_qr.png'로 저장했습니다.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/jun/GitStudy/Data_4'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QR 코드 인식 실패 😢\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyzbar.pyzbar import decode\n",
+    "from PIL import Image\n",
+    "\n",
+    "img = Image.open(\"repaired_qr.png\")\n",
+    "results = decode(img)\n",
+    "\n",
+    "if results:\n",
+    "    for result in results:\n",
+    "        print(\"QR 내용:\", result.data.decode('utf-8'))\n",
+    "else:\n",
+    "    print(\"QR 코드 인식 실패 😢\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
