프로젝트 5 옮기는 중

--- a/src/project/project5/project_code/tiktok/tiktoker_topic_modeling/tiktoker_topic_modeling.ipynb
+++ b/src/project/project5/project_code/tiktok/tiktoker_topic_modeling/tiktoker_topic_modeling.ipynb
@@ -1076,12 +1076,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "os.getcwd()\n",
-    "os.chdir(\"/Users/jun/GitStudy/Data_4/src/project/project5/tiktok/0130\")"
+    "os.chdir(\"/Users/jun/GitStudy/Data_4/src/project/project5/tiktok/0130\")\n",
+    "\n",
+    "#/Users/jun/GitStudy/Data_4/Data/project/project5/tiktok"
    ]
   },
   {
